Practica de uso de etiquetas

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </ul>
                     <p class="periodo-empresa">Julio 2021 - Diciembre 2022   |   Colombia</p>                       
                     <h5 class="titulo-universidad">Autodidacta <span class="texto-naranja">(Cursos Youtube, OpenBootcamp, freeCodeCamp)</span></h5>
-                    <p>Competencias en:</p>
+                    <p><em>Competencias</em> en:</p>
                     <ul>
                         <li>...</li>
                         <li>...</li>
